# libodb-boost

./: INSTALL  Makefile.am  bootstrap  configure.ac  libodb-boost-vc10.sln  libodb-boost-vc11.sln  libodb-boost-vc12.sln  libodb-boost-vc8.sln  libodb-boost-vc9.sln  libodb-boost.pc.in  makefile  version
m4/: disable-rpath.m4  (+6 more)
odb/boost/: Makefile.am  date-time.options  exception.hxx  exceptions.cxx  exceptions.hxx  lazy-ptr.hxx  libodb-boost-vc10.vcxproj  libodb-boost-vc10.vcxproj.filters  libodb-boost-vc11.vcxproj  libodb-boost-vc12.vcxproj  libodb-boost-vc8.vcproj  libodb-boost-vc9.vcproj  makefile  multi-index.options  optional.options  smart-ptr.options  unordered.options  uuid.options  version.hxx  version.options
odb/boost/date-time/: exceptions.cxx  exceptions.hxx  gregorian-common.options  gregorian-mssql.options  gregorian-mysql.options  gregorian-oracle.options  gregorian-pgsql.options  gregorian-sqlite.options  gregorian.options  posix-time-common.options  posix-time-mssql.options  posix-time-mysql.options  posix-time-oracle.options  posix-time-pgsql.options  posix-time-sqlite.options  posix-time.options
odb/boost/details/: config.h.in  config.hxx  export.hxx
odb/boost/multi-index/: container-traits.hxx
odb/boost/optional/: wrapper-traits.hxx
odb/boost/smart-ptr/: lazy-pointer-traits.hxx  lazy-ptr.hxx  lazy-ptr.ixx  lazy-ptr.txx  pointer-traits.hxx  wrapper-traits.hxx
odb/boost/unordered/: container-traits.hxx
odb/boost/uuid/: uuid-common.options  uuid-mssql.options  uuid-mysql.options  uuid-oracle.options  uuid-pgsql.options  uuid-sqlite.options
(+31 files in other folders)
